--- a/public/kbo.html
+++ b/public/kbo.html
@@ -6,8 +6,10 @@
   <title>티빙 야구</title>
 </head>
 <body>
-  <div><button>투표</button></div>
-  
+  <div><button>'ssg' 투표</button></div>
+  <div>결과<br>
+    <div id="result"></div>
+  </div>
   <script>
     document.querySelector('button').addEventListener('click', async () => {
       await fetch('https://mllktb2orlqfixtautpjpdu7t40dwpmp.lambda-url.ap-northeast-2.on.aws', {
@@ -17,6 +19,7 @@
       const res = await fetch('https://mllktb2orlqfixtautpjpdu7t40dwpmp.lambda-url.ap-northeast-2.on.aws');
       const json = await res.json();
       console.log(json);
+      result.innerHTML = JSON.stringify(json);
     });
     
   </script>
