--- a/public/login.html
+++ b/public/login.html
@@ -10,7 +10,7 @@
   <h1>로그인 샘플</h1>
   <form>
     <label for="email">이메일</label>
-    <input type="text" id="email" name="email" value="u1@market.com">
+    <input type="text" id="email" name="email" value="u1@gmail.com">
     <br>
     <label for="password">비밀번호</label>
     <input type="password" id="password" name="password" value="11111111">
